# move37

./: .gitignore  CHANGELOG.md  README.md  dev-start.sh  license.md  licesnse.md  main.py  mcp-start.sh  pyproject.toml  requirements.txt  run_mcp_server.py  setup.bat  setup.sh  setup_uv.sh  start.sh  upgrade.sh
app/agents/: base_agent.py  butterfly_agent.py  conductor_agent.py  first_responder_agent.py  librarian_agent.py  number_ninja_agent.py  persephone_agent.py  recall_agent.py  recorder_agent.py  thinker_agent.py  user_fact_extractor_agent.py
app/api/: main.py
app/core/: config.py
app/database/: conversation_db.py  file_db.py  recorder_vector_db.py  user_facts_db.py  vector_db_interface.py
app/mcp/: __init__.py  client.py  server.py
app/messaging/: base.py  websocket.py
app/models/: conversation.py  messages.py  models.py
app/tools/: README.md  __init__.py  browser_tool.py  conversation_tool.py  file_search_tool.py  math_tool.py  social_media_tools.py  user_information_tool.py  web_search_tool.py
app/utils/: chunking.py  date_utils.py  embeddings.py  file_handler.py  file_processor.py  file_vectorizer.py  llm.py  llm_utils.py  transcription.py  vector_utils.py
frontend/: .gitignore  index.html  package-lock.json  package.json  script.js  styles.css  vite.config.ts
frontend-v2/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-v2/src/: app.html  app.postcss
frontend-v2/src/routes/: +layout.svelte  +page.svelte
frontend-v2/src/theme/: dark.scss  light.scss
frontend/src/: markdown-it.d.ts
(+44 files in other folders)
